--- a/hbase/Dockerfile
+++ b/hbase/Dockerfile
@@ -9,7 +9,7 @@ ENV PATH=$PATH:.:$HBASE_HOME/bin
 
 ENV HBASE_VERSION=2.1.0
 
-RUN wget https://mirrors.tuna.tsinghua.edu.cn/apache/hbase/$HBASE_VERSION/hbase-$HBASE_VERSION-bin.tar.gz && \
+RUN wget http://archive.apache.org/dist/hbase/$HBASE_VERSION/hbase-$HBASE_VERSION-bin.tar.gz && \
 	tar -xzvf hbase-$HBASE_VERSION-bin.tar.gz -C /root/ && \
     mv /root/hbase-$HBASE_VERSION $HBASE_HOME && \
 	rm -rf hbase-$HBASE_VERSION-bin.tar.gz
