--- a/hbase/Dockerfile
+++ b/hbase/Dockerfile
@@ -14,6 +14,11 @@ RUN wget http://archive.apache.org/dist/hbase/$HBASE_VERSION/hbase-$HBASE_VERSIO
     mv /root/hbase-$HBASE_VERSION $HBASE_HOME && \
 	rm -rf hbase-$HBASE_VERSION-bin.tar.gz
 
+RUN find $HBASE_HOME/lib -name "hadoop*jar" | xargs -i rm -f {}
+RUN find $HBASE_HOME/lib -name "zookeeper*jar" | xargs -i rm -f {}
+RUN find $HADOOP_HOME/share/hadoop -name "hadoop*jar" | xargs -i cp {} $HBASE_HOME/lib/
+
+ADD file/zookeeper-3.4.13.jar $HBASE_HOME/lib/
 
 ADD config/hbase/* $HBASE_HOME/conf/
 
