--- a/hbase/docker-compose.yml
+++ b/hbase/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     - "./volume/spark/logs/slave1:/root/spark/logs/"
     - "./volume/hbase/slave1:/works"
     - "./volume/hbase/logs/slave1:/root/hbase/logs/"
+    - "./volume/etc/localtime:/etc/localtime:ro"
     hostname: hadoop-slave1
     networks:
       hbase:
@@ -25,6 +26,7 @@ services:
     - "./volume/spark/logs/slave2:/root/spark/logs/"
     - "./volume/hbase/slave2:/works/"
     - "./volume/hbase/logs/slave2:/root/hbase/logs/"
+    - "./volume/etc/localtime:/etc/localtime:ro"
     hostname: hadoop-slave2
     networks:
       hbase:
@@ -67,6 +69,7 @@ services:
     - "./volume/hbase/master:/works/"
     - "./volume/hbase/logs/master:/root/hbase/logs/"
     - "./volume/code:/code"
+    - "./volume/etc/localtime:/etc/localtime:ro"
     hostname: hbase-master
     networks:
       hbase:
@@ -78,6 +81,7 @@ services:
     image: mysql:5.7
     volumes:
     - "./volume/mysql:/var/lib/mysql"
+    - "./volume/etc/localtime:/etc/localtime:ro"
     container_name: hadoop-mysql
     hostname: mysql
     networks:
@@ -90,6 +94,7 @@ services:
     image: forsrc/zookeeper:3.4.13
     volumes:
     - "./volume/zk/zoo1:/works"
+    - "./volume/etc/localtime:/etc/localtime:ro"
     container_name: zoo1
     hostname: zoo1
     networks:
@@ -102,6 +107,7 @@ services:
     image: forsrc/zookeeper:3.4.13
     volumes:
     - "./volume/zk/zoo2:/works"
+    - "./volume/etc/localtime:/etc/localtime:ro"
     container_name: zoo2
     hostname: zoo2
     networks:
@@ -114,6 +120,7 @@ services:
     image: forsrc/zookeeper:3.4.13
     volumes:
     - "./volume/zk/zoo3:/works"
+    - "./volume/etc/localtime:/etc/localtime:ro"
     container_name: zoo3
     hostname: zoo3
     networks:
