--- a/kafka/config/zoo.cfg
+++ b/kafka/config/zoo.cfg
@@ -26,7 +26,7 @@ clientPort=2181
 # Purge task interval in hours
 # Set to "0" to disable auto purge feature
 #autopurge.purgeInterval=1
-server.1=kafka1:2888:3888
-server.2=kafka2:2888:3888
-server.3=kafka3:2888:3888
+server.1=zoo1:2888:3888
+server.2=zoo2:2888:3888
+server.3=zoo3:2888:3888
 
