--- a/bigdata/tools/spark-2.3.1-bin-hadoop2.7/conf/spark-defaults.conf
+++ b/bigdata/tools/spark-2.3.1-bin-hadoop2.7/conf/spark-defaults.conf
@@ -10,6 +10,6 @@
 # spark.executor.extraJavaOptions  -XX:+PrintGCDetails -Dkey=value -Dnumbers="one two three"
 
 
-spark.executor.extraClassPath	/root/hive/lib/mysql-connector-java-5.1.40-bin.jar:/root/hive/lib/guava-14.0.1.jar
-spark.driver.extraClassPath		/root/hive/lib/mysql-connector-java-5.1.40-bin.jar:/root/hive/lib/guava-14.0.1.jar
+spark.executor.extraClassPath	$SPARK_HOME/lib/*
+spark.driver.extraClassPath		$SPARK_HOME/lib/*
 spark.yarn.archive				hdfs://hadoop-master:54310/spark/share/lib/spark-libs.jar
