--- a/bigdata/tools/pig-0.17.0/conf/pig.properties
+++ b/bigdata/tools/pig-0.17.0/conf/pig.properties
@@ -193,16 +193,16 @@
 #
 # pig.spill.gc.activation.size=40000000
 
-# Spill will be triggered if the fraction of Old Generation heap exceeds the usage or collection threshold. 
+# Spill will be triggered if the fraction of Old Generation heap exceeds the usage or collection threshold.
 # For bigger heap sizes, using a fixed size for collection and usage thresholds will
 # utilize memory better than a percentage of the heap.
-# So usage threshold is calculated as 
+# So usage threshold is calculated as
 #     Max(HeapSize * pig.spill.memory.usage.threshold.fraction, HeapSize - pig.spill.unused.memory.threshold.size)
-# So collection threshold is calculated as 
+# So collection threshold is calculated as
 #     Max(HeapSize * pig.spill.collection.threshold.fraction, HeapSize - pig.spill.unused.memory.threshold.size)
 
 # pig.spill.memory.usage.threshold.fraction=0.7
-# pig.spill.collection.threshold.fraction=0.7 
+# pig.spill.collection.threshold.fraction=0.7
 # pig.spill.unused.memory.threshold.size=367001600
 
 # Maximum amount of data to replicate using the distributed cache when doing
@@ -343,8 +343,8 @@
 #
 # pig.exec.nocombiner=false
 
-# Enable or disable use of combiners only in reducer shuffle-merge phase. 
-# pig.exec.nocombiner turns off combiner for both map and reduce phases. 
+# Enable or disable use of combiners only in reducer shuffle-merge phase.
+# pig.exec.nocombiner turns off combiner for both map and reduce phases.
 # Valid values are auto, true or false. Default is auto in which Pig turns off combiner
 # on per combine plan basis when bags are present in a particular plan.
 # Value of true or false will apply to all combine plans in the script.
@@ -612,8 +612,8 @@ pig.ats.enabled=true
 #
 # By default, Pig job fails immediately on encountering an errors on writing Tuples for Store.
 # If you want Pig to allow certain errors before failing you can set this property.
-# If the propery is set to true and the StoreFunc implements ErrorHandling if will allow configurable errors 
-# based on the OutputErrorHandler implementation  
+# If the propery is set to true and the StoreFunc implements ErrorHandling if will allow configurable errors
+# based on the OutputErrorHandler implementation
 # pig.error-handling.enabled = false
 #
 # Controls the minimum number of errors for store
@@ -654,7 +654,7 @@ pig.ats.enabled=true
 # Tez specific properties
 #
 
-# Enable auto/grace parallelism in tez. Default is true and these should be 
+# Enable auto/grace parallelism in tez. Default is true and these should be
 # used by default unless you encounter some bug in automatic parallelism.
 # If pig.tez.auto.parallelism is set to false, 1 is used as default parallelism
 
@@ -675,9 +675,12 @@ pig.ats.enabled=true
 # Pig only reads once from datasource for LoadFuncs specified here during sort instead of
 # loading once for sampling and loading again for partitioning.
 # Used to avoid hitting external non-filesystem datasources like HBase and Accumulo twice.
-     
+
 pig.sort.readonce.loadfuncs=org.apache.pig.backend.hadoop.hbase.HBaseStorage,org.apache.pig.backend.hadoop.accumulo.AccumuloStorage
 
 # If set, Pig will override tez.am.launch.cmd-opts and tez.am.resource.memory.mb to optimal
 # even they are set to a different value. Default value is true.
 #pig.tez.configure.am.memory=false
+
+fs.default.name=hdfs://hadoop-master:54310
+mapred.job.tracker=hadoop-master:8021
