--- a/bigdata/code/hadoop-demo/pom.xml
+++ b/bigdata/code/hadoop-demo/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.forsrc.hadoop</groupId>
-    <artifactId>wordcount</artifactId>
+    <artifactId>demo</artifactId>
     <packaging>jar</packaging>
     <version>0.1.0-SNAPSHOT</version>
-    <name>wordcount</name>
+    <name>hadoop demo</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
