--- a/bigdata/docker-compose-one-zookeeper.yml
+++ b/bigdata/docker-compose-one-zookeeper.yml
@@ -10,6 +10,7 @@ services:
     hostname: hadoop-slave1
     networks:
       bigdata:
+        ipv4_address: 172.25.0.11
         aliases:
         - hadoop-slave1
     tty: true
@@ -24,6 +25,7 @@ services:
     hostname: hadoop-slave2
     networks:
       bigdata:
+        ipv4_address: 172.25.0.12
         aliases:
         - hadoop-slave2
     tty: true
@@ -54,6 +56,7 @@ services:
     hostname: hadoop-master
     networks:
       bigdata:
+        ipv4_address: 172.25.0.10
         aliases:
         - hadoop-master
     tty: true
@@ -72,6 +75,7 @@ services:
     hostname: hadoop-hive
     networks:
       bigdata:
+        ipv4_address: 172.25.2.1
         aliases:
         - hadoop-hive
     tty: true
@@ -85,6 +89,7 @@ services:
     hostname: mysql
     networks:
       bigdata:
+        ipv4_address: 172.25.3.1
         aliases:
         - mysql
     environment:
@@ -107,6 +112,7 @@ services:
     hostname: zoo1
     networks:
       bigdata:
+        ipv4_address: 172.25.1.1
         aliases:
         - zoo1
         - zoo2
@@ -115,3 +121,6 @@ services:
 
 networks:
   bigdata:
+    ipam:
+      config:
+      - subnet: 172.25.0.0/24
