--- a/bigdata/code/spark-demo/pom.xml
+++ b/bigdata/code/spark-demo/pom.xml
@@ -40,11 +40,11 @@
             <artifactId>spark-streaming_2.11</artifactId>
             <version>2.3.1</version>
         </dependency>
-        <!--<dependency> &lt;!&ndash; Spark dependency &ndash;&gt;-->
-            <!--<groupId>org.apache.spark</groupId>-->
-            <!--<artifactId>spark-streaming-kafka_2.11</artifactId>-->
-            <!--<version>2.3.1</version>-->
-        <!--</dependency>-->
+        <dependency> <!-- Spark dependency -->
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming-kafka-0-10_2.11</artifactId>
+            <version>2.3.1</version>
+        </dependency>
         <dependency> <!-- Spark dependency -->
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_2.11</artifactId>
@@ -92,7 +92,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.3.1</version>
+                <version>3.1.0</version>
                 <!-- The configuration of the plugin -->
                 <configuration>
                     <!-- Specifies the configuration file of the assembly plugin -->
