--- a/bigdata/tools/spark-2.3.1-bin-hadoop2.7/conf/spark-defaults.conf
+++ b/bigdata/tools/spark-2.3.1-bin-hadoop2.7/conf/spark-defaults.conf
@@ -12,4 +12,4 @@
 
 spark.executor.extraClassPath	$SPARK_HOME/lib/*
 spark.driver.extraClassPath		$SPARK_HOME/lib/*
-spark.yarn.archive				hdfs://hadoop-master:9000/spark/share/lib/spark-libs.jar
+spark.yarn.archive			     	hdfs://hadoop-master:9000/spark/lib/*.jar
