--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ logs/*
 logs
 /bigdata/tools/spark-2.3.2-bin-without-hadoop/work
 /bigdata/tools/spark-2.3.1-bin-hadoop2.7/work
+/bigdata/tools/spark-2.4.0-bin-hadoop2.7/work
